# cmtf-pls

./: .gitignore  README.md  TPLS_(R2Y Fixed).py  makefile  missing_data_imputation_PLS.py  pyproject.toml  requirements.txt  tensor_envelope_PLS.py
.github/workflows/: build.yml  pytest.yml
cmtf_pls/: _pls_tensor.py  atpls.py  cmtf.py  data_import.py  missingvals.py  npls.py  pls2.py  pls3.py  synthetic.py  tpls.py  util.py  validate.py
cmtf_pls/figures/: common.py  figure1.py
tests/: test_atpls.py  test_cmtf.py  test_cmtf_pls.py  test_data_import.py  test_missingvals.py  test_synthetic.py  test_tensorly.py  test_tpls.py
