[tool.poetry]
name = "cmtf-pls"
version = "0.1.0"
description = "A Partial Least Squares (PLS) implementation in CMTF."
authors = ["Cyrillus <cyztan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.23.0"
xarray = "^2022.3.0"
tensorly = "^0.8.0"
tensorpack = {git = "https://github.com/meyer-lab/tensorpack.git", rev = "python_update"}
seaborn = "^0.11.2"
pandas = "^1.4.3"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
tensordata = {git = "https://github.com/meyer-lab/tensordata.git", branch = "main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
