[project]
name = "cmtf-pls"
version = "0.1.0"
description = "A Partial Least Squares (PLS) implementation in CMTF."
authors = [
    { name = "Cyrillus", email = "cyztan@gmail.com" }
]
dependencies = [
    "numpy>=1.23.0",
    "xarray>=2022.3.0",
    "tensorly>=0.8.0",
    "seaborn>=0.11.2",
    "pandas>=1.4.3",
    "scikit-learn>=1.1.1",
]
requires-python = ">=3.12,<3.13"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0",
]
