[project]
name = "cmtf-pls"
version = "0.1.0"
description = "A Partial Least Squares (PLS) implementation in CMTF."
authors = [
    { name = "Cyrillus", email = "cyztan@gmail.com" }
]
dependencies = [
    "numpy>=2.2",
    "tensorly>=0.9.0",
    "pandas>=1.5",
    "scikit-learn>=1.6",
]
requires-python = ">=3.12,<3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
]
